src/styles.css
body {
	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
	background-color: black;
	margin: 0;
	padding: 0;
	font-weight: normal;
	color: white;
}

a {
	color: rgb(192, 192, 192);
}

a:hover {
	color: rgb(255, 255, 255);
}

table {
	margin: 0px;
	padding: 0px 0px 0px 0px;
	border-collapse: collapse
}

th {
	font-size: 16px;
	padding: 0px 2px 0px 2px;
	font-variant: small-caps;
	background-color: rgba(0, 0, 0, 0);
	font-weight: 300;
}


td {
	border-width: 1px;
	border-color: rgb(255, 255, 255);
	border-style: none;
	padding: 0 0 0 0;
}

.simpleStatsPadding {
	padding: 0 5px 0 5px;
}

tr {
	height: 20px;
}

input {
	background-color: rgba(0, 0, 0, 0.7);
	border-width: 1px;
	color: rgb(212, 201, 45);
	font-variant-caps: all-small-caps;
}

.filterHidden {
	opacity: 0%;
}


button {
	color: rgb(199, 199, 199);
	font-size: 14px;
	font-variant: all-small-caps;
	font-style: bold;
	margin: 5px;
	background-color: rgba(39, 39, 39, 0.7);
	border-radius: 10px;
	border-width: 1px;
	border-style: double;
	height: 60%;
	border-color: rgb(180, 180, 180);
}

button:hover {
	color: rgb(255, 255, 255);
}

button:active {
	color: rgb(151, 151, 151);
	background-color: black;
}

select {
	background-color: rgba(39, 39, 39, 0.7);
	color: rgb(189, 173, 128);
	border-radius: 10px;
	border-width: 1px;
	border-style: double;
	height: 60%;
	border-color: rgb(180, 180, 180);
}

option {
	color: white;
}

.view {
	position: absolute;
	border-width: 1px;
	border-color: rgb(95, 82, 47);
	border-color: rgb(95, 82, 47);
	border-style: solid;
}

.view_header {
	background-color: #000000aa;
	right: 5px;
	height: 40px;
	margin: 5px;
	border-width: 1px;
	border-color: black;
	border-style: solid;
	display: flex;
	align-items: center;
	flex-direction: row;

}


.view_content {
	display: flex;
	justify-content: space-evenly;
	overflow: inherit;
	background-color: #000000aa;
	position: inherit;
	margin: 5px;
	left: 0px;
	right: 0px;
	top: 48px;
	bottom: 2px;
	border-width: 2px;
	border-color: rgb(95, 82, 47);
	border-width: 2px;
	border-color: rgb(95, 82, 47);
	border-style: solid;
	scrollbar-color: rgba(227, 239, 252, 0.637) rgba(12, 12, 12, 0.445);
}

.header_element {
	color: rgb(199, 199, 199);
	font-size: 14px;
	font-variant: all-small-caps;
	font-style: bold;
	margin: 5px;
}

.unit_table {
	width: 98%;
}

.unit_table_header_image {
	width: 20px;
	height: 20px;
}

.unit_table_image {
	width: 48px;
	height: 48px;

}

.unit_table_image_medium {
	width: 36px;
	height: 36px;
}

.unit_table_image_small {
	width: 28px;
	height: 28px;
}

.unit_table_smalltext {
	font-size: 9px;
}

.unit_table_cell {
	background-color: #00000022;
	text-align: center;
}

.unit_table_cell_alt {
	background-color: #72727222;
}

.unit_table_cell_traits {
	width: 100px;
}

.table_add_unit_button {
	width: 100%;
	height: 36px;
	font-style: bold;
	font-size: 18px;
}

#unitStatsImg {
	width: 24px;
	height: 24px;
	transform: translate(0, 10%);
}

.unitStatsResourceImg {
	width: 20px;
	height: 20px;
	transform: translate(0, 40%);
}

#statsUnitBottomContainer {
	position: absolute;
	display: flex;
	flex-direction: row;
	border-width: 1px;
	border: none;
	left: 10%;
	bottom: 10%;
	border-color: rgb(255, 255, 255);
	background-color: rgba(0, 0, 0, 0.5);
	padding: 5px 25px 5px 25px;

	z-index: 10;
	font-size: x-large;
	font-variant: small-caps;
}

#statsUnitEnergyValue {
	color: rgb(68, 140, 233);
}

#statsUnitBandwidthValue {
	color: rgb(233, 220, 43);
}

#statsUnitMatterValue {
	color: rgb(255, 58, 58);
}

.statsUnitResourceContainer {
	font-weight: 700;
	display: flex;
	flex-direction: row;
	padding: 0 0 0 20px;
}

#statsChartContainer {
	position: relative;
	left: 60%;
	top: 10%;
	width: 180px;
	right: 10%;
	border-width: 1px;
	border: none;
	padding: 5px;

	border-color: rgb(0, 0, 0);
	background-color: rgba(0, 0, 0, 0.185);
	z-index: 10;
}

.chartDiv {
	position: relative;
	background-color: rgba(0, 0, 0, 0.5);
	left: 45%;
	width: 45%;
	height: 20%;
	margin: 3px;
	padding: 3px;
	border: dashed;
	border-color: rgba(255, 255, 255, 0.479);
	z-index: 10;
	border-width: 1px;
}

.comparisonChartContainer {
	position: relative;
	display: flex;
	flex-shrink: 5;
	flex-direction: row;
	height: 100%;
	width: 100%;

	background-color: rgba(0, 0, 0, 0.192);
	justify-content: space-evenly;

}

.starchart {
	border: dashed;
	border-width: 1px;
	border-color: rgba(192, 162, 81, 0.205);
	width: 100px;
}

sup {
	vertical-align: top;
	font-size: 6px;
	position: relative;
	top: -0.5em;
}

#statsUnitRankDiv {
	position: absolute;
	line-height: 160%;
	font-weight: 300;
	font-size: 12px;
	text-align: right;
	top: 3%;
	padding: 0px;
	bottom: 0%;
	right: 55%;
	left: 10%;
}

#unitVideo {
	position: absolute;
	min-width: 100%;
	min-height: 100%;
	max-width: 110%;
	max-height: 125%;
	bottom: 0;
	width: auto;
	height: auto;
	overflow: hidden;
	background-size: cover;
	z-index: 0;
	border-width: 1px;
	border: none;
	border-color: rgb(255, 255, 255);
}

.barchart {
	position: absolute;
	width: 100px;
	left: 24px;
	overflow: hidden;
}



#wrapper {
	position: absolute;
	background-image: url('images/a1.png');
	background-position: center center;
	background-size: cover;
	border-width: 1px;
	border-color: white;
	top: 0px;
	bottom: 0px;
	left: 0px;
	right: 0px;
	overflow: hidden;
	display: flex;
}

#app {
	position: relative;
	flex-grow: 1;
	margin: 5px;
}

#sidebar {
	position: relative;
	font-size: small;
	font-variant: small-caps;
	font-style: bold;
	height: 100%;
	float: left;
	background-color: rgba(8, 8, 10, 0.596);
	box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
	;
}

#sidebarLogoImg {
	width: 100%;
	opacity: 100%;
	transform: translate(2%, 0);
}

#sidebarLogoImg {
	padding: 15 0 0 0;
	width: 100%;
	opacity: 100%;
}

#sidebar_title_div {
	padding: 10px;
}

#sidebar_title_div_v {
	transform: rotate(90deg) translate(30px);
}

.sidebar_footer_div {
	position: absolute;
	bottom: 0px;
	padding: 5px;
	font-size: 12px;
	color: rgba(255, 255, 255, 0.671);
	text-shadow: 2px 2px 1px black;
}

.sidebar_extraSmallFont {
	padding: 5 0 5 0;
	font-family: 'Times New Roman', Times, serif;
	font-size: 8px;
	font-variant: normal;
	color: rgba(255, 255, 255, 0.671);
	font-weight: 600;
	text-shadow: 2px 2px 1px black;
}

#toggleSidebarButton {
	padding: 0 0 0 0;
	margin: 0 0 0 0;
	position: relative;
	font-size: xx-large;
	height: 30px;
	width: 30px;
	top: 10px;
	left: 50%;
	background-image: 'images/burgericon.png';
	transform: translate(-40%, 0);
}

#toggleSidebarButtonImg {
	padding: 0 0 0 0;
	margin: 0 0 4 0;
	height: 20px;
	width: 20px;
}

#unit_view-h {
	overflow: auto;
	background-image: 'images/a1.png';
	background-color: #cb8e8e88;
	margin: 3px;
	right: 50%;
	left: 0px;
	top: 0px;
	bottom: 0px
}

#deck_view-h {
	overflow: auto;
	background-color: #cbc48e88;
	margin: 3px;
	left: 50%;
	top: 0px;
	right: 0px;
	bottom: 50%;
}

#stats_view-h {
	background-color: #8ecb9988;
	margin: 3px;
	left: 50%;
	top: 50%;
	right: 0px;
	bottom: 0px;
	overflow: hidden;
}

#unit_view-v {
	overflow: auto;
	background-color: #cb8e8e88;
	margin: 0;
	left: 0;
	right: 0;
	top: 0;
	bottom: 60.5%;
	margin: 0;
	left: 0;
	right: 0;
	top: 0;
	bottom: 60.5%;
}


#deck_view-v {
	overflow: auto;
	background-color: #cbc48e88;
	margin: 0;
	height: 29.5%;
	left: 0;
	right: 0;
	top: 40%;
	margin: 0;
	height: 29.5%;
	left: 0;
	right: 0;
	top: 40%;
}

#stats_view-v {
	background-color: #8ecb9988;
	margin: 0;
	margin: 0;
	height: 30%;
	left: 0;
	right: 0;
	top: 70%;
	bottom: 0;
	left: 0;
	right: 0;
	top: 70%;
	bottom: 0;
	overflow: hidden;
}

#unit_table_head {
	position: sticky;
	background-color: rgba(0, 0, 0, 0.623);
	background-color: rgba(0, 0, 0, 0.623);
	top: -1px;
	height: 30px;
}

#unit_table_body {
	top: 30px;
}

#deck_content {
	padding: 10 0 10 0;
	background-color: rgba(5, 1, 66, 0.685);
	border: dotted;
	border-width: 0px;
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: space-evenly;
}


.deckSlotImage {
	width: 100%;
	height: 100%;
	opacity: 80%;
	resize: none;
}

.deckContainer {
	width: 40%;
	height: 100%;
	border-color: rgb(2, 1, 90);
	border-width: 1px;
	border-style: solid;
	overflow-y: hidden;
	overflow-x: hidden;
}

.deckContainerActive {
	border-color: rgb(192, 162, 81);
}

.deckSlotContainer {
	width: 100%;
	height: fit-content;
	margin: 5 0 5 0;
	display: flex;
	flex-direction: row;
	justify-content: space-evenly;
	align-items: center;
	flex-wrap: wrap;
}

.unit_deck_slot_div {
	width: 19%;
	border-color: rgba(2, 0, 36, 0.781);
	border-width: 2px;
	border-style: solid;
	margin: 1%;
	overflow: hidden;
}

.unit_deck1_slot_div_filled {
	border-color: rgb(19, 104, 19);
}

.unit_deck2_slot_div_filled {
	border-color: rgb(104, 24, 24);
}

.deck_stats_div {
	font-weight: 350;
	font-size: 16px;
	line-height: 80%;
	width: 100%;
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: space-between;
	border: 0px;
	border-style: solid;
	padding: 5px;
}

.statDiv {
	font-variant: small-caps;
	display: flex;
	flex-direction: row;
	width: 20%;
	height: 0%;
	padding: 4 0 4 0;
	align-items: center;
	justify-content: center;
	border: none;
	border-width: 1px;
	border-color: green;
	background-color: rgba(0, 0, 0, 0.308);
}

.complexStatDiv {
	justify-content: left;
	width: 100%;
	line-height: 100%;
	height: 100%;
}

.resourceStatDiv {
	width: 30%;
}

.deck_stats_img {
	width: 30%;
}

.resourceStatImg {
	width: 20%;
}

.deck_stats_img {
	width: 30%;
}

.deck_stats_img_small {
	width: 8%;
	height: 8%;
}

#unit_view_card_btn {
	color: grey;
	border-color: grey;
}

.links_div {
	flex: auto;
	position: relative;
}

.links_content {
	position: inherit;
	color: grey;
}

.selected {
	color: rgb(192, 162, 81);
}

.selected {
	color: rgb(192, 162, 81);
}

